# termchat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/termchat/: __init__.py  cli.py  config.py  provider.py  session.py  ui.py
tests/: test_config.py  test_session.py
